<?xml version="1.0" encoding="utf-8"?>

<!--This assignment was done by Olena Y-->
<!--Date: 2019-03-07-->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/rock_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/ROCK"
        android:onClick="makeMove"
        android:tag="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rock_button" />

    <ImageView
        android:id="@+id/papper_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/PAPER"
        app:layout_constraintEnd_toStartOf="@+id/scissors_imageView"
        app:layout_constraintStart_toEndOf="@+id/rock_imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/paper_button"
        android:onClick="makeMove"
        android:tag="1"/>

    <ImageView
        android:id="@+id/scissors_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/SCISSOR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/scissor_button"
        android:onClick="makeMove"
        android:tag="2"/>

    <ImageView
        android:id="@+id/your_move_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/your_move"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/papper_imageView"
        app:srcCompat="@drawable/none" />

    <ImageView
        android:id="@+id/game_move_imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/games_move"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/papper_imageView"
        app:srcCompat="@drawable/none" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="8dp"
        android:text="@string/your_move"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/your_move_imageView" />

    <TextView
        android:id="@+id/result_textView"
        android:layout_width="234dp"
        android:layout_height="109dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/result"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="WIN/LOSE/DRAW" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        android:text="@string/games_move"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_move_imageView5" />

</android.support.constraint.ConstraintLayout>